--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,106 +1,88 @@
-/* Styles for desktop and larger screens */
-/* BEGIN: Desktop Styles */
-.container {
-    width: 960px;
-    margin: 0 auto;
-}
+@media screen and (min-width: 280px) {
+h1{
+    font-size: 1.5rem;
+   }
 
-/* Other desktop styles... */
+h2{
+    font-size: 1.5rem;
+   }
 
-/* END: Desktop Styles */
+   div{
+    width: 100%;
+   }
 
-/* Styles for mobile phones and smaller screens */
-/* BEGIN: Mobile Styles */
-@media screen and (max-width: 600px) {
-    html, body{
+  #header-div {
+    width: 100%;
+    border-radius: 200px;
+    align-items: center;
+  }
+   .header{
+    font-size: 2rem;
+   }
+
+    #current-task-div {
         width: 100%;
-        overflow: hidden;
-    }
-    div{
-    
-        text-align: center;
-      
-    }
-    .container {
-        width: 100%;
-        height: auto;
-        
-    }
-
-    .header{
-        font-size: 50px;
-    }
-    .main-container{
-        width: 100%;
-        height: 100%;
-    }
-
-    #timer-container{
-        width: 100%;
-        border-radius: 100px;
-    }
-    #timer-container{
-        width: 90%;
-        height: 10%;
-        border-radius: 100px;
-    }
-
-    #timer-text{
-        font-size: 10px;
-    
-    }
-
-    #timer{
-        height: 0%;
-        background: #000;
-        border: transparent;
-    }
-
-    #button-container{
-        width: 100%;
-
-        
-    }
-   #task-header-container{
-        width: 90%;
-       margin: 0 auto ;
-    }
-    #task-container{
-    
-        margin-left: 0;
-        margin-right: 30px;
-        width: 90%;
-        height: 40%;
-    }
-    #task-list{
-        font-size: 10px;
-        margin-top: 90px;
-    }
-
-    #current-task-div{
-        width: 90%;
-        margin: 0 auto;
-        border-radius: 50px;
-        box-shadow: 0px 0px 20px 0px #000000;
+        background-color: red;
+        border-radius: 200px;
         align-items: center;
     }
-    #current-task-header{
-        font-size: 30px;
-        margin: 10px auto;
+    
+    #alert-div {
+        width: 100%;
+        padding: 0%;
+        position: sticky;
+        border-radius: 200px;
+        align-items: center;
     }
 
-    #alert-div{
-        width: 90%;
-        height: 10%;
-        overflow-y: auto;
-    }
-    #alert-text{
-        font-size: 1rem;
+    .main-container {
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        align-items: center;
     }
 
-    h2{
-        font-size: 1px;
+    .buttons-container {
+        justify-content: center;
+        display: inline-flex;
+        width: 100%;
+        align-items: center;
     }
-    /* Other mobile styles... */
+
+    #timer-container {
+        padding: 0;
+        background-color: transparent;
+        width: 100%;
+        align-items: center;
+    }
+
+    #timer {
+        background-color: transparent;
+        padding: 0;
+        align-items: center;
+    }
+    #task-container {
+        padding: 0;
+        width: 95%;
+        height: 60%;
+        align-items: center;
+    }
+
+    #task-header-container {
+        margin: 20px auto 0 auto;
+        padding: 0;
+        width: 95%;
+        align-items: center;
+    }
+    
+    #current-task-container {
+        padding: 0;
+        width: 95%;
+        height: 50%;
+        align-items: center;
+    }
+
+   h1 #timer-text {
+        font-size: 1.5rem;
+    }
 }
-/* END: Mobile Styles */
