--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,5 +1,15 @@
 @media screen and (min-width: 280px) {
-h1{
+
+    html, body{
+        font-family: sans-serif;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        background-color: blue;
+    }
+
+    h1{
     font-size: 1.5rem;
    }
 
