--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -11,10 +11,12 @@
 
     h1{
     font-size: 1.5rem;
+    font-family: sans-serif;
    }
 
 h2{
     font-size: 1.5rem;
+    font-family: sans-serif;
    }
 
    div{
