--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -63,6 +63,7 @@ h2{
 
     #timer-container {
         padding: 0;
+        height: 8% ;
         background-color: transparent;
         width: 100%;
         align-items: center;
@@ -73,11 +74,20 @@ h2{
         padding: 0;
         align-items: center;
     }
+
+    #timer h1 {
+        font-size: 2rem;
+        font-family: sans-serif;
+    }
     #task-container {
         padding: 0;
         width: 95%;
         height: 60%;
         align-items: center;
+    }
+    #task-container h1 {
+        font-size: 1.5rem;
+        font-family: sans-serif;
     }
 
     #task-header-container {
@@ -92,9 +102,21 @@ h2{
         width: 95%;
         height: 50%;
         align-items: center;
+        font-family: sans-serif;
+        font-size: 1.5rem;
     }
 
    h1 #timer-text {
+        font-size: 1rem;
+        font-family: sans-serif;
+    }
+
+    #task-input {
         font-size: 1.5rem;
+        font-family: sans-serif;
+    }
+
+    #task-button {
+        font-family: sans-serif;
     }
 }
