--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -7,16 +7,19 @@
         width: 100%;
         height: 100%;
         background-color: blue;
+        font-weight: bold;
     }
 
     h1{
     font-size: 1.5rem;
     font-family: sans-serif;
+    font-weight: bold;
    }
 
 h2{
     font-size: 1.5rem;
     font-family: sans-serif;
+    font-weight: bold;
    }
 
    div{
@@ -30,6 +33,7 @@ h2{
   }
    .header{
     font-size: 2rem;
+    font-weight: bold;
    }
 
     #current-task-div {
@@ -78,6 +82,7 @@ h2{
     #timer h1 {
         font-size: 2rem;
         font-family: sans-serif;
+        font-weight: bold;
     }
     #task-container {
         padding: 0;
@@ -88,6 +93,7 @@ h2{
     #task-container h1 {
         font-size: 1.5rem;
         font-family: sans-serif;
+        font-weight: bold;
     }
 
     #task-header-container {
@@ -103,20 +109,35 @@ h2{
         height: 50%;
         align-items: center;
         font-family: sans-serif;
+        font-weight: bold;
         font-size: 1.5rem;
     }
 
    h1 #timer-text {
         font-size: 1rem;
         font-family: sans-serif;
+        font-weight: bold;
+        font-weight: bold;
     }
 
     #task-input {
         font-size: 1.5rem;
         font-family: sans-serif;
+        font-weight: bold;
     }
 
     #task-button {
         font-family: sans-serif;
+        font-weight: bold;
+    }
+
+    #start-button {
+        font-family: sans-serif;
+        font-weight: bold;
+    }
+
+    #reset-button {
+        font-family: sans-serif ;
+        font-weight: bold;
     }
 }
