--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -8,6 +8,7 @@
         height: 100%;
         background-color: blue;
         font-weight: bold;
+        overflow-x: hidden;
     }
 
     h1{
@@ -130,7 +131,10 @@ h2{
         font-family: sans-serif;
         font-weight: bold;
     }
-
+#task-list {
+    padding: 0;
+       width: 100%;
+    }
     #start-button {
         font-family: sans-serif;
         font-weight: bold;
