--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,147 +1,146 @@
 @media screen and (max-width: 480px) {
+  html,
+  body {
+    font-family: sans-serif;
+    overflow-x: hidden;
+  }
 
-    html, body{
-        font-family: sans-serif;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        background-color: blue;
-        font-weight: bold;
-        overflow-x: hidden;
-    }
-
-    h1{
+  h1 {
     font-size: 1.5rem;
     font-family: sans-serif;
     font-weight: bold;
-   }
+  }
 
-h2{
+  h2 {
     font-size: 1.5rem;
     font-family: sans-serif;
     font-weight: bold;
-   }
+  }
 
-   div{
+  div {
     width: 100%;
-   }
+  }
 
   #header-div {
     width: 100%;
     border-radius: 200px;
     align-items: center;
   }
-   .header{
+  .header {
     font-size: 2rem;
     font-weight: bold;
-   }
+  }
 
-    #current-task-div {
-        width: 100%;
-        background-color: red;
-        border-radius: 200px;
-        align-items: center;
-    }
-    
-    #alert-div {
-        width: 100%;
-        padding: 0%;
-        position: sticky;
-        border-radius: 200px;
-        align-items: center;
-    }
+  #current-task-div {
+    width: 100%;
+    background-color: red;
+    border-radius: 200px;
+    align-items: center;
+  }
 
-    .main-container {
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        align-items: center;
-    }
+  #alert-div {
+    width: 100%;
+    padding: 0%;
+    position: sticky;
+    border-radius: 200px;
+    align-items: center;
+  }
 
-    .buttons-container {
-        justify-content: center;
-        display: inline-flex;
-        width: 100%;
-        align-items: center;
-    }
-
-    #timer-container {
-        padding: 0;
-        height: 8% ;
-        background-color: transparent;
-        width: 100%;
-        align-items: center;
-    }
-
-    #timer {
-        background-color: transparent;
-        padding: 0;
-        align-items: center;
-    }
-
-    #timer h1 {
-        font-size: 2rem;
-        font-family: sans-serif;
-        font-weight: bold;
-    }
-    #task-container {
-        padding: 0;
-        width: 95%;
-        height: 60%;
-        align-items: center;
-    }
-    #task-container h1 {
-        font-size: 1.5rem;
-        font-family: sans-serif;
-        font-weight: bold;
-    }
-
-    #task-header-container {
-        margin: 20px auto 0 auto;
-        padding: 0;
-        width: 95%;
-        align-items: center;
-    }
-    
-    #current-task-container {
-        padding: 0;
-        width: 95%;
-        height: 50%;
-        align-items: center;
-        font-family: sans-serif;
-        font-weight: bold;
-        font-size: 1.5rem;
-    }
-
-   h1 #timer-text {
-        font-size: 1rem;
-        font-family: sans-serif;
-        font-weight: bold;
-        font-weight: bold;
-    }
-
-    #task-input {
-        font-size: 1.5rem;
-        font-family: sans-serif;
-        font-weight: bold;
-    }
-
-    #task-button {
-        font-family: sans-serif;
-        font-weight: bold;
-    }
-#task-list {
+  .main-container {
     padding: 0;
-       width: 100%;
-    }
-    #start-button {
-        font-family: sans-serif;
-        font-weight: bold;
-    }
+    width: 100%;
+    height: 70vh;
+    align-items: center;
+  }
 
-    #reset-button {
-        font-family: sans-serif ;
-        font-weight: bold;
-    }
+  .buttons-container {
+    padding: 0;
+    margin: auto;
+    justify-content: center;
+    display: inline-flex;
+    width: 100%;
+    align-items: center;
+  }
+
+  #timer-container {
+    padding: 0;
+    justify-self: center;
+    background-color: transparent;
+    width: 50%;
+    align-items: center;
+  }
+
+  #timer {
+    background-color: transparent;
+    padding: 0;
+    align-items: center;
+  }
+
+  #timer h1 {
+    font-size: 2rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+  #task-container {
+    padding: 0;
+    width: 90%;
+
+    height: 50vh;
+    align-items: center;
+  }
+  #task-container h1 {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #task-header-container {
+    background-color: transparent;
+    padding: 0;
+    width: 100%;
+  }
+
+  #current-task-container {
+    padding: 0;
+    width: 95%;
+    height: 22vh;
+    align-items: center;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+  }
+
+  h1 #timer-text {
+    font-size: 1rem;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-weight: bold;
+  }
+
+  #task-input {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #task-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+  #task-list {
+    margin: 8vh auto 8vh auto;
+    position: inherit;
+    padding: 0;
+    border-radius: 15px;
+    width: 95%;
+  }
+  #start-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #reset-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
 }
