--- a/style.css
+++ b/style.css
@@ -190,9 +190,9 @@ h1 {
 }
 
 #task-text {
-  margin: 10px auto;
-  padding: 10px;
-  width: 75%;
+  margin: 50px auto 0 auto;
+  padding: 20px;
+  width: 80%;
   background-color: transparent;
   border-radius: 15px;
   font-size: 20px;
@@ -204,7 +204,6 @@ h1 {
 #current-task-container {
   padding: 10px;
   width: 90%;
-  height: 10%;
   background-color: transparent;
   border-radius: 15px;
   font-size: 40px;
@@ -212,6 +211,7 @@ h1 {
   font-style: italic;
   color: black;
   text-align: center;
+  justify-content: center;
   overflow-wrap: break-word;
   overflow-y: auto;
 }
