--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 480px) {
+@media all and (max-width: 700px) {
   html,
   body {
     font-family: sans-serif;
@@ -129,6 +129,254 @@
   }
   #task-list {
     margin: 8vh auto 8vh auto;
+    position: inherit;
+    padding: 0;
+    border-radius: 15px;
+    width: 95%;
+  }
+  #start-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #reset-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  html,
+  body {
+    font-family: sans-serif;
+    overflow-x: hidden;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #header-div {
+    width: 100%;
+    border-radius: 200px;
+    align-items: center;
+  }
+  .header {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+
+  #current-task-div {
+    width: 100%;
+    background-color: red;
+    border-radius: 200px;
+    align-items: center;
+  }
+
+  #alert-div {
+    width: 100%;
+    padding: 0%;
+    position: sticky;
+    border-radius: 200px;
+    align-items: center;
+  }
+
+  .main-container {
+    padding: 0;
+    width: 100%;
+    height: 70vh;
+    align-items: center;
+  }
+
+  .buttons-container {
+    padding: 0;
+    margin: auto;
+    justify-content: center;
+    display: inline-flex;
+    width: 100%;
+    align-items: center;
+  }
+
+  #task-container {
+    padding: 0;
+    width: 90%;
+
+    height: 45vh;
+    align-items: center;
+  }
+  #task-container h1 {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #task-header-container {
+    background-color: transparent;
+    padding: 0;
+    width: 100%;
+  }
+
+  #current-task-container {
+    padding: 0;
+    width: 95%;
+    height: 20vh;
+    align-items: center;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+  }
+
+  h1 #timer-text {
+    font-size: 1rem;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-weight: bold;
+  }
+
+  #task-input {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #task-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+  #task-list {
+    margin: 12vh auto 0 auto;
+    position: inherit;
+    padding: 0;
+    border-radius: 15px;
+    width: 95%;
+  }
+  #start-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #reset-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  html,
+  body {
+    font-family: sans-serif;
+    overflow-x: hidden;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #header-div {
+    width: 100%;
+    border-radius: 200px;
+    align-items: center;
+  }
+  .header {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+
+  #current-task-div {
+    width: 100%;
+    background-color: red;
+    border-radius: 200px;
+    align-items: center;
+  }
+
+  #alert-div {
+    width: 100%;
+    padding: 0%;
+    position: sticky;
+    border-radius: 200px;
+    align-items: center;
+  }
+
+  .main-container {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+
+  .buttons-container {
+    padding: 0;
+    margin: auto;
+    justify-content: center;
+    display: inline-flex;
+    width: 100%;
+    align-items: center;
+  }
+
+  #task-container {
+    padding: 0;
+    width: 90%;
+
+    height: 55vh;
+    align-items: center;
+  }
+  #task-container h1 {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #task-header-container {
+    background-color: transparent;
+    padding: 0;
+    width: 100%;
+  }
+
+  #current-task-container {
+    padding: 0;
+    width: 95%;
+    height: 20vh;
+    align-items: center;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+  }
+
+  h1 #timer-text {
+    font-size: 1rem;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-weight: bold;
+  }
+
+  #task-input {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+
+  #task-button {
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+  #task-list {
+    margin: 12vh auto 0 auto;
     position: inherit;
     padding: 0;
     border-radius: 15px;
