--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -47,8 +47,8 @@ h2,
   font-size: 1.5rem;
 }
 
-h1 #timer-text {
-  font-size: 1rem;
+#timer h1 {
+  font-size: 5rem;
   font-family: sans-serif;
   font-weight: bold;
 }
@@ -114,7 +114,7 @@ h1 #timer-text {
     padding: 5px;
   }
   #task-header-container h1 {
-    font-family: fantasy;
+    font-family: sans-serif;
   }
 }
 
