--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ h1 {
   margin: 8.5rem auto;
   padding: 10px;
   width: 75%;
-  background-color: transparent;
+  background-color: white;
   border-radius: 50px;
   box-shadow: 0px 0px 20px 0px #000000;
 }
