--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h1 {
   position: inherit;
   padding: 10px;
   width: 75%;
-  background-color: white;
+  background-color: transparent;
   border-radius: 50px;
   box-shadow: 0px 0px 20px 0px #000000;
 }
